# rag

./: .env.example  .envrc  .gitignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFESTO.md  README.md  client-values.yml  cookiecutter.json  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: new-agent.md  new-agent.yml  research.md  research.yml  workflow-improvement.md  workflow-improvement.yml
.github/agents/: AGENTS.md  README.md  a5-context-architect.agent.md  b5-dependency-auditor.agent.md  business-lead.agent.md  ci-monitor.agent.md  comms-strategist.agent.md  community-pulse.agent.md  d4-methodology-enforcer.agent.md  d5-knowledge-base.agent.md  deep-research.agent.md  devrel-strategist.agent.md  docs-linter.agent.md  env-validator.agent.md  executive-automator.agent.md  executive-docs.agent.md  executive-fleet.agent.md  executive-orchestrator.agent.md  executive-planner.agent.md  executive-pm.agent.md  (+22 more)
data/: amplification-table.yml  delegation-gate.yml  judge-evaluation-protocol.md  judge-preflight-checks.yml  judge-prompt-template.md  labels.yml  phase-gate-fsm.yml  rag-benchmarks.yml  rate-limit-profiles.yml  reading-level-targets.yml  task-type-classifier.yml
docs/: AGENTS.md  context_budget_target.md  glossary.md  t4-without-t1-squash-merge.md
hooks/: post_gen_project.py
mcp_server/: README.md  _security.py  dogma_server.py
scripts/: README.md  adaptive_k_selector.py  afs_index.py  agent_capabilities.yaml  agent_registry.py  amplify_context.py  analyse_fleet_coupling.py  analyze_study2a.py  annotate_provenance.py  assess_doc_quality.py  backfill_machine_metadata.py  batch_rescore_judge.py  beir_lite_eval.py  benchmark_rag.py  bulk_github_operations.py  bulk_github_read.py  capability_gate.py  check_current_pr_closes.py  check_divergence.py  check_fleet_integration.py  check_pr_closes.py  check_problems_panel.py  correlate_health_metrics.py  create_phase1_research_issues.py  detect_drift.py  detect_rate_limit.py  export_project_state.py  extract_action_items.py  fetch_all_sources.py  fetch_source.py  fetch_toolchain_docs.py  generate_agent_manifest.py  link_source_stubs.py  measure_cross_reference_density.py  migrate_agent_xml.py  parse_audit_result.py  parse_fsm_to_graph.py  pr_review_reply.py  pre_review_sweep.py  preexec_audit_log.py  (+26 more)
tests/: __init__.py  conftest.py  test_adaptive_k_selector.py  test_afs_index.py  test_agent_registry.py  test_amplify_context.py  test_analyse_fleet_coupling.py  test_annotate_provenance.py  test_assess_doc_quality.py  test_audit_provenance.py  test_backfill_machine_metadata.py  test_batch_rescore_judge.py  test_beir_lite_eval.py  test_benchmark_rag.py  test_bulk_github_operations.py  test_bulk_github_read.py  test_capability_gate.py  test_check_current_pr_closes.py  test_check_divergence.py  test_check_fleet_integration.py  test_check_pr_closes.py  test_cookiecutter_template.py  test_detect_drift.py  test_detect_rate_limit.py  test_export_project_state.py  test_extract_action_items.py  test_fetch_source.py  test_fetch_toolchain_docs.py  test_mcp_retrieval.py  test_mcp_server.py  test_parse_audit_result.py  test_parse_fsm_to_graph.py  test_preexec_audit_log.py  test_propose_dogma_edit.py  test_prune_scratchpad.py  test_query_docs.py  test_rag_index.py  test_rate_limit_config.py  test_rate_limit_gate.py  test_remaining_scripts.py  (+16 more)
{{cookiecutter.project_slug}}/: AGENTS.md  README.md  client-values.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
(+414 files in other folders)
